Some fixes and random files generation in tests