@@ -3,31 +3,31 @@ package com.gmail.vusketta;
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Stream;
 
 public class LS {
+    private static Writer out;
     public static void main(String[] args) {
         LSArguments arguments = new LSArguments(args);
 
-        final Path path = Path.of(arguments.getDirectoryOrFile());
-        try (Stream<Path> pathStream = Files.walk(Paths.get(arguments.getDirectoryOrFile()), 1)
-                .sorted(arguments.isReverse() ? Comparator.reverseOrder() : Comparator.naturalOrder())) {
+        final Path directory = Path.of(arguments.getDirectoryOrFile());
+        try (Stream<Path> pathStream = Files.walk(directory, 1)) {
             OutputStream outputStream =
                     arguments.getOutputName() == null ? System.out : new FileOutputStream(arguments.getOutputName());
-            Writer out = new BufferedWriter(new OutputStreamWriter(outputStream));
-            if (Files.isDirectory(path)) {
-                final List<Path> files = new ArrayList<>(pathStream.toList());
-                files.remove(path);
-                for (Path file : files) {
-                    writeFile(arguments, out, file);
+            out = new BufferedWriter(new OutputStreamWriter(outputStream));
+            if (Files.isDirectory(directory)) {
+                final List<String> files = new ArrayList<>(pathStream.map(Path::toString)
+                        .sorted(arguments.isReverse() ? Comparator.reverseOrder() : Comparator.naturalOrder()).toList());
+                files.remove(directory.toString());
+                for (String file : files) {
+                    writeFile(arguments, Path.of(file));
                     out.write('\n');
                 }
             } else {
-                writeFile(arguments, out, path);
+                writeFile(arguments, directory);
             }
             out.close();
         } catch (IOException e) {
@@ -35,12 +35,12 @@ public class LS {
         }
     }
 
-    private static void writeFile(LSArguments arguments, Writer out, Path file) throws IOException {
+    private static void writeFile(final LSArguments arguments, final Path file) throws IOException {
         out.write(file.getFileName().toString());
         if (arguments.isLong()) {
-            out.write(" " + LSFile.getRights(file, arguments.isHumanReadable()));
-            out.write(" " + LSFile.getLastModifiedTime(file));
-            out.write(" " + LSFile.getMemory(file, arguments.isHumanReadable()));
+            out.write(" " + LSUtils.getFileRights(file, arguments.isHumanReadable()));
+            out.write(" " + LSUtils.getFileLastModifiedTime(file));
+            out.write(" " + LSUtils.getFileMemory(file, arguments.isHumanReadable()));
         }
     }
 }
